fixed footer - still need to link the profile to smth

--- a/app/assets/stylesheets/components/_body.scss
+++ b/app/assets/stylesheets/components/_body.scss
@@ -1,5 +1,13 @@
 #page-container {
   position: relative;
   min-height: 100vh;
-  margin: 0 auto;
+  margin-top: 80px;
+  margin-bottom: 64px;
+}
+
+#page-container-concertshow {
+  position: relative;
+  min-height: 100vh;
+  margin-top: 66px;
+  margin-bottom: 64px;
 }
