--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,45 +1,32 @@
-<div class="navbar-space"></div>
-<%= render "shared/navbar" %>
+<div id="page-container">
 
-<div class="show">
-  <h1>These are the concerts you're attending!</h1>
-</div>
+  <%= render "shared/navbar" %>
 
-<% if @groups.count >= 1 %>
-  <% @groups.each do |group| %>
-    <%= link_to group_path(group) do %>
-      <div class="concert-card">
-        <div class="concert-info">
-          <h2><strong><%= group.concert.artist.name %></strong></h2>
-          <p><strong><%= group.concert.date %></strong></p>
-          <p><%= group.concert.venue %>, <%= group.concert.location %></p>
+  <div class="show">
+    <h1>These are the concerts you're attending!</h1>
+  </div>
+
+  <% if @groups.count >= 1 %>
+    <% @groups.each do |group| %>
+      <%= link_to group_path(group) do %>
+        <div class="concert-card">
+          <div class="concert-info">
+            <h2><strong><%= group.concert.artist.name %></strong></h2>
+            <p><strong><%= group.concert.date %></strong></p>
+            <p><%= group.concert.venue %>, <%= group.concert.location %></p>
+          </div>
+          <div class="concert-avatars">
+            <img src="https://s2.coinmarketcap.com/static/img/coins/200x200/5426.png" class="avatar">
+            <img src="https://s2.coinmarketcap.com/static/img/coins/200x200/5426.png" class="avatar">
+            <img src="https://s2.coinmarketcap.com/static/img/coins/200x200/5426.png" class="avatar">
+            <img src="https://s2.coinmarketcap.com/static/img/coins/200x200/5426.png" class="avatar">
+            <img src="https://s2.coinmarketcap.com/static/img/coins/200x200/5426.png" class="avatar">
+            <img src="https://s2.coinmarketcap.com/static/img/coins/200x200/5426.png" class="avatar">
+          </div>
         </div>
-        <div class="concert-avatars">
-          <img src="https://s2.coinmarketcap.com/static/img/coins/200x200/5426.png" class="avatar">
-          <img src="https://s2.coinmarketcap.com/static/img/coins/200x200/5426.png" class="avatar">
-          <img src="https://s2.coinmarketcap.com/static/img/coins/200x200/5426.png" class="avatar">
-          <img src="https://s2.coinmarketcap.com/static/img/coins/200x200/5426.png" class="avatar">
-          <img src="https://s2.coinmarketcap.com/static/img/coins/200x200/5426.png" class="avatar">
-          <img src="https://s2.coinmarketcap.com/static/img/coins/200x200/5426.png" class="avatar">
-        </div>
-      </div>
+      <% end %>
     <% end %>
-  <% end %>
-<% else %>
-  <p>You're not attending any concerts yet!</p>
-<% end %>
-
-<div class="footer-musicmates">
-  <%= link_to "/concerts", class: "icons target", id: "target1" do %>
-    <i class="fa-solid fa-house"></i>
-  <% end %>
-  <%= link_to "/groups", class: "icons target", id: "target2" do %>
-    <i class="fa-solid fa-clipboard-list text-success"></i>
-  <% end %>
-  <%= link_to "/invitations", class: "icons target", id: "target3" do %>
-    <i class="fa-solid fa-envelope"></i>
-  <% end %>
-  <%= link_to "/concerts", class: "icons target", id: "target4" do %>
-    <i class="fa-solid fa-user"></i>
+  <% else %>
+    <p>You're not attending any concerts yet!</p>
   <% end %>
 </div>
