--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,9 +11,8 @@
   </head>
 
   <body>
-    <div id="page-container">
       <%= render "shared/flashes" %>
       <%= yield %>
-    </div>
+      <%= render "shared/footer" %>
   </body>
 </html>
