--- a/app/assets/stylesheets/components/_chatroom.scss
+++ b/app/assets/stylesheets/components/_chatroom.scss
@@ -22,6 +22,7 @@
   #new_message {
     border-top: 1px solid $gray-200;
     padding: 1rem;
+    padding-bottom: 0;
 
     .form-group {
       margin-bottom: 0;
