--- a/app/assets/stylesheets/components/_concert_index.scss
+++ b/app/assets/stylesheets/components/_concert_index.scss
@@ -12,7 +12,7 @@
   background-image: linear-gradient(black, black), url("https://trenchtrenchtrench.com/assets/articles/central-cee-credit-kunography-2.jpg");
   background-size: cover;
   background-blend-mode: saturation;
-  box-shadow: 1px 1px lightgrey;
+  box-shadow: rgba(0, 0, 0, 0.2) 0px 10px 15px -3px, rgba(0, 0, 0, 0.09) 0px 4px 6px -2px;
   transition: 0.05s;
 }
 
