--- a/app/assets/stylesheets/components/_invitations.scss
+++ b/app/assets/stylesheets/components/_invitations.scss
@@ -4,11 +4,13 @@
   align-items: center;
 
   h1 {
+
     text-align: center;
     color: #2b3a67;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    font-size: 14;
+    font-weight: 700;
+    margin: 10px auto;
+    font-size: 20px;
+    width: 80%;
   }
 
   h4 {
@@ -20,50 +22,56 @@
   text-align: center;
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-evenly;
   text-decoration: none;
-  white-space: normal;
   align-items: center;
-  width: 300px;
+  margin: 0 auto;
+  width: 290px;
 
-  .btn-accept {
-    background-color: $success;
-    border: 1px solid $success;
-    border-radius: 7px;
-    color: white;
-    text-decoration: none;
-    padding: 8px 12px;
-    transition: 0.02s;
-    text-align: center;
-    width: 100px;
-    margin: auto;
+    .btn-accept {
+      background-color: $success;
+      border: 1px solid $success;
+      border-radius: 7px;
+      margin-top: 0;
+      padding: 8px 12px;
+      text-align: center;
+      width: 100px;
+      transition: all 0.2s;
+      box-shadow: rgba(0, 0, 0, 0.2) 0px 10px 15px -3px, rgba(0, 0, 0, 0.09) 0px 4px 6px -2px;
 
-  }
-  .btn-accept:focus {
-    background-color: #2b3a67;
-    border: 1px solid white;
-    transform: translateY(-0.15em);
-    box-shadow: 0 0.5px 0.5px $success;
-  }
+      a {
+        text-decoration: none;
+        color: white;
+        font-weight: 700;
+      }
+    }
 
-  .btn-decline{
-    background-color: #2b3a67;
-    border: 1px solid #2b3a67;
-    border-radius: 7px;
-    color: white;
-    text-decoration: none;
-    padding: 8px 12px;
-    transition: 0.02s;
-    text-align: center;
-    width: 100px;
-    margin: auto;
+    .btn-accept:active {
+      border: 1px solid white;
+      transform: scale(1.02);
+    }
 
+    .btn-decline{
+      background-color: #2b3a67;
+      border: 1px solid #2b3a67;
+      margin-top: 0;
+      border-radius: 7px;
+      padding: 8px 12px;
+      text-align: center;
+      width: 100px;
+      transition: all 0.2s;
+      box-shadow: rgba(0, 0, 0, 0.2) 0px 10px 15px -3px, rgba(0, 0, 0, 0.09) 0px 4px 6px -2px;
+
+      a {
+        text-decoration: none;
+        color: white;
+        font-weight: 700;
+      }
+    }
+
+    .btn-decline:active {
+      border: 1px solid white;
+      transform: scale(1.02);
+    }
   }
-  .btn-decline:focus{
-    background-color: $success;
-    border: 1px solid white;
-    transform: translateY(-0.15em);
-    box-shadow: 0 0.5px 0.5px $success;
-  }
-}
 }
