--- a/app/assets/stylesheets/components/_search.scss
+++ b/app/assets/stylesheets/components/_search.scss
@@ -5,7 +5,7 @@
   width: 330px;
   border: 2px solid #2B3A67;
   border-radius: 18px;
-  box-shadow: 1px 1px lightgrey;
+  box-shadow: rgba(0, 0, 0, 0.2) 0px 10px 15px -3px, rgba(0, 0, 0, 0.09) 0px 4px 6px -2px;
 }
 
 .search .form-control {
