--- a/app/assets/stylesheets/components/_show.scss
+++ b/app/assets/stylesheets/components/_show.scss
@@ -10,8 +10,10 @@
   h1 {
     text-align: center;
     color: #2b3a67;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    font-weight: 700;
+    margin: 10px auto;
+    font-size: 20px;
+    width: 80%;
   }
 }
 
@@ -31,7 +33,7 @@
   align-items: center;
   justify-content: space-around;
   border-radius: 16px;
-  box-shadow: 1px 1px lightgrey;
+  box-shadow: rgba(0, 0, 0, 0.2) 0px 10px 15px -3px, rgba(0, 0, 0, 0.09) 0px 4px 6px -2px;
   p {
     color: white;
     font-size: 12px;
@@ -47,7 +49,7 @@
   padding: 10px;
   background-color: #0eb1d2;
   border-radius: 16px;
-  box-shadow: 1px 1px lightgrey;
+  box-shadow: rgba(0, 0, 0, 0.2) 0px 10px 15px -3px, rgba(0, 0, 0, 0.09) 0px 4px 6px -2px;
   justify-content: space-around;
   align-items: center;
 
@@ -77,7 +79,7 @@
     text-align: center;
     background-color: #2b3a67;
     border-radius: 16px;
-    box-shadow: 1px 1px lightgrey;
+    box-shadow: rgba(0, 0, 0, 0.2) 0px 10px 15px -3px, rgba(0, 0, 0, 0.09) 0px 4px 6px -2px;
   }
 }
 
@@ -101,7 +103,7 @@
   padding: 10px;
   background-color: #2b3a67;
   border-radius: 16px;
-  box-shadow: 1px 1px lightgrey;
+  box-shadow: rgba(0, 0, 0, 0.2) 0px 10px 15px -3px, rgba(0, 0, 0, 0.09) 0px 4px 6px -2px;
   justify-content: space-around;
   align-items: center;
 
