--- a/app/views/invitations/index.html.erb
+++ b/app/views/invitations/index.html.erb
@@ -1,4 +1,4 @@
-<div id="page-container">
+<div id="page-container-groups">
 
   <%= render "shared/navbar" %>
 
@@ -26,8 +26,8 @@
           </div>
           <!-- invite.status -->
           <div class="status-buttons">
-            <div class="btn-accept"><%= link_to ":heavy_check_mark:", invitation_path(invite, status: 1), data: { turbo_method: :patch } %></div>
-            <div class="btn-decline"><%= link_to ":x:", invitation_path(invite, status: 2), data: { turbo_method: :patch } %></div>
+            <div class="btn-accept"><%= link_to "accept", invitation_path(invite, status: 1), data: { turbo_method: :patch } %></div>
+            <div class="btn-decline"><%= link_to "decline", invitation_path(invite, status: 2), data: { turbo_method: :patch } %></div>
           </div>
         <% end %>
       <% end %>
