Nothing wrong with Chat. JS was the issue. Replaced tagline to something standard for now

--- a/app/views/pages/landing.html.erb
+++ b/app/views/pages/landing.html.erb
@@ -1,8 +1,6 @@
 <div id="landing-container">
   <%=image_tag "logo.jpg", width: 350 %>
-  <p id="p1">Mingle with your <strong>MATES</strong></p>
-  <p id="p2">Find concerts for your <strong>MUSIC</strong>.</p>
-  <p>Be a <strong>MUSIC MATE</strong></p>
+  <p id="p1">Find your <strong>Music Mate</strong></p>
   <%= link_to "Login with Spotify", concerts_path, id:"landing-btn" %>
   <h5>*Spotify account required for MusicMates.</h5>
 </div>
