--- a/app/views/concerts/show.html.erb
+++ b/app/views/concerts/show.html.erb
@@ -28,8 +28,8 @@
       🧑‍🤝‍🧑
     </div>
     <div class="show-detail">
-      <h2>12 of your friends </h2>
-      <h3>might be going</h3>
+      <h2><%= pluralize(@users.count, 'mate') %></h2>
+      <h3>might be interested</h3>
     </div>
   </div>
   <div class="show-desc">
