--- a/app/views/shared/_search-bar.html.erb
+++ b/app/views/shared/_search-bar.html.erb
@@ -5,8 +5,6 @@
       class: "form-control",
       placeholder: "Explore upcoming gigs"
     %>
-    <button name="button" type="submit" class="btn btn-flat">
-      <img src="https://img.icons8.com/ios-glyphs/30/000000/search--v1.png"/>
-    </button>
+    <%= submit_tag "Search", class: "btn btn-flat" %>
     </div>
   <% end %>
