--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -4,6 +4,7 @@
   width: 100%;
   justify-content: space-between;
   background: #2B3A67;
+  z-index: 1000;
 }
 
 .navbar-lewagon .navbar-collapse {
