I haven't pushed in a while

--- a/app/assets/stylesheets/components/_show.scss
+++ b/app/assets/stylesheets/components/_show.scss
@@ -25,7 +25,7 @@
 
 .show-desc {
   display: flex;
-  text-align: center;
+  text-align: left;
   background-color: #2b3a67;
   width: 310px;
   padding: 10px;
