--- a/app/assets/stylesheets/components/_chatroom.scss
+++ b/app/assets/stylesheets/components/_chatroom.scss
@@ -1,7 +1,6 @@
 .chatroom {
   background: white;
   margin-top: 9px;
-  height: calc(100vh - 75px);
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -14,7 +13,7 @@
   }
 
   .messages {
-    height: 100%;
+    height: 400px;
     overflow: scroll;
     padding: 1rem;
   }
