--- a/app/views/chatrooms/_chatbox.html.erb
+++ b/app/views/chatrooms/_chatbox.html.erb
@@ -9,14 +9,16 @@
       </div>
     <% end %>
   </div>
-  <%= simple_form_for [group, chatroom, message],
-    html: { data: { action: "turbo:submit-end->chatroom-subscription#resetForm" }, class: "d-flex" } do |f|
-      %>
-      <%= f.input :content,
-        label: false,
-        placeholder: "Message ##{chatroom.name}",
-        wrapper_html: {class: "flex-grow-1 chat-input"}
-      %>
-      <%= f.submit "Send", class: "send-btn mb-3" %>
-    <% end %>
+  <div class="msg-input">
+    <%= simple_form_for [group, chatroom, message],
+      html: { data: { action: "turbo:submit-end->chatroom-subscription#resetForm" }, class: "d-flex" } do |f|
+        %>
+        <%= f.input :content,
+          label: false,
+          placeholder: "Message ##{chatroom.name}",
+          wrapper_html: {class: "flex-grow-1 chat-input"}
+        %>
+        <%= f.submit "Send", class: "send-btn mb-3" %>
+      <% end %>
+  </div>
 </div>
