--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,10 +1,6 @@
 <div id="page-container">
-
+<!-- Talk to Tae-->
   <%= render "shared/navbar" %>
-
-  Hello?
-  <%= @concert %>
-  <%= @group %>
 
   <div class="concert-card">
     <div class="concert-info">
@@ -18,8 +14,9 @@
   <!-- Friends go here! -->
   </div>
 
-  <div class="chatbox">
+  <div class="chatbox-group">
     <%= render "chatrooms/chatbox", chatroom: @chatroom, message: @message, group: @group %>
   </div>
 
+<%= render "shared/footer" %>
 </div>
