--- a/app/assets/stylesheets/pages/_group_new.scss
+++ b/app/assets/stylesheets/pages/_group_new.scss
@@ -28,7 +28,7 @@
     box-shadow: rgba(0, 0, 0, 0.2) 0px 10px 15px -3px, rgba(0, 0, 0, 0.09) 0px 4px 6px -2px;
   }
 
-  #group-avatar {
+  .group-avatar {
     width: 30px;
     height: 30px;
   }
