--- a/app/views/concerts/index.html.erb
+++ b/app/views/concerts/index.html.erb
@@ -6,17 +6,23 @@
   </div>
 
   <% @concerts.each do |concert| %>
-    <%= link_to concert_path(concert) do %>
-     <div class="img-grey" style="background-image: url(<%= concert.artist.image_url %>)"></div>
+    <%= link_to concert_path(concert), class: "concert-a" do %>
+      <div class="concert-card">
+
+        <div class="img-grey" style="background-image: url(<%= concert.artist.image_url %>)"></div>
+
         <div class="img-gradient"></div>
+
         <div class="concert-info">
           <h2><strong><%= concert.artist.name %></strong></h2>
-          <p><strong><%= concert.date.strftime("%A %e %B %Y") %></strong></p>
+          <p><strong><%= concert.date %></strong></p>
           <p><%= concert.venue %>, <%= concert.location %></p>
         </div>
+        <% follows = concert.artist.follows %>
+        <% userfollow = [] %>
         <div class="concert-avatars">
           <% concert.users.without_me(current_user).first(5).each do |user|%>
-             <%= cl_image_tag user.photo.key, class: "avatar" %>
+            <%= cl_image_tag user.photo.key, class: "avatar" %>
           <% end %>
           <% if concert.users.count > 5 %>
             <!--  userfollow - 5 -->
