--- a/app/views/concerts/show.html.erb
+++ b/app/views/concerts/show.html.erb
@@ -3,7 +3,7 @@
   <%= render "shared/navbar" %>
 
   <div class="show">
-    <img src="https://koreajoongangdaily.joins.com/data/photo/2022/08/12/4061635e-b480-467b-90f5-cab3f8d64e5c.jpg" alt="IU Concert" class="show-image" >
+    <%= image_tag @concert.artist.image_url, class: "show-image" %>
     <h1 id="show-h1"><%= @concert.artist.name %></h1>
     <div class="show-detail-container">
       <div class="show-emoji">
@@ -29,7 +29,7 @@
         🧑‍🤝‍🧑
       </div>
       <div class="show-detail">
-        <h2><%= pluralize(@users.count, 'mate') %></h2>
+        <h2><%= pluralize(@concert.users.without_me(current_user).count, 'mate') %></h2>
         <h3>might be interested</h3>
       </div>
     </div>
@@ -41,7 +41,7 @@
   </div>
 
   <div id="show-btn-container">
-  <%= link_to "Create a group!", new_concert_group_path(@concert), id:"show-btn" %>
+    <%= link_to "Create a group!", new_concert_group_path(@concert), id:"show-btn" %>
   </div>
 
 </div>
