--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -28,7 +28,9 @@
   color: white;
 }
 
-.navbar-space {
-  height: 66px;
-  background-color: white;
-}
+// .navbar-space {
+//   height: 66px;
+//   width: 100%;
+//   background-color: white;
+//   z-index: 100;
+// }
