--- a/app/views/concerts/show.html.erb
+++ b/app/views/concerts/show.html.erb
@@ -1,6 +1,7 @@
 <div id="page-container-concertshow">
 
   <%= render "shared/navbar" %>
+  <div class="navbar-space"></div>
 
   <div class="show">
     <img src="https://koreajoongangdaily.joins.com/data/photo/2022/08/12/4061635e-b480-467b-90f5-cab3f8d64e5c.jpg" alt="IU Concert" class="show-image" >
