--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,6 +1,7 @@
-<div id="page-container">
+<div id="page-container-groups">
 <!-- Talk to Tae-->
   <%= render "shared/navbar" %>
+
 
   <div class="concert-card">
     <div class="concert-info">
