--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -6,6 +6,7 @@ $blue: #0D6EFD;
 $yellow: #FFC65A;
 $orange: #E67E22;
 $green: #1EDD88;
-$our-green:#00e070;
+$our-green:#1DB954;
+$success: #1DB954;
 $gray: #0E0000;
 $light-gray: #F4F4F4;
