--- a/app/views/pages/landing.html.erb
+++ b/app/views/pages/landing.html.erb
@@ -1,6 +1,8 @@
 <div id="landing-container">
-  <%=image_tag "logo.jpg", width: 350 %>
-  <p id="p1">Find your <strong>Music Mate</strong></p>
-  <%= link_to "Login with Spotify", concerts_path, id:"landing-btn" %>
-  <h5>*Spotify account required for MusicMates.</h5>
+  <%= render "shared/logo_animated" %>
+  <div id="tagline">
+    <p id="p1">Find your next gig buddies.</p>
+    <%= link_to "Connect Spotify", concerts_path, id:"landing-btn" %>
+    <h5>You'll need to be a Spotify user for this app to work!</h5>
+  </div>
 </div>
