--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -8,7 +8,7 @@
     <%= link_to "/invitations", class: "icons target", id: "target3" do %>
       <i class="fa-solid fa-envelope <%= iscurrentpage?("invitations") %>"></i>
     <% end %>
-    <%= link_to "/concerts", class: "icons target", id: "target4" do %>
-      <i class="fa-solid fa-user <%= iscurrentpage?("concerts") %>"></i>
+    <%= link_to "/profile", class: "icons target", id: "target4" do %>
+      <i class="fa-solid fa-user <%= iscurrentpage?("profile") %>"></i>
     <% end %>
   </div>
