--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,8 @@
   </head>
 
   <body>
-    <%= render "shared/flashes" %>
+    <%= islandingpage?("pages", "landing") %>
     <%= yield %>
-    <%= render "shared/footer" %>
+    <%= footerlandingpage?("pages", "landing") %>
   </body>
 </html>
