--- a/app/assets/stylesheets/components/_show.scss
+++ b/app/assets/stylesheets/components/_show.scss
@@ -2,7 +2,7 @@
 
   img {
     width: 375px;
-    height: 200px;
+    height: 250px;
     object-fit: cover;
     background: top;
   }
@@ -137,14 +137,16 @@
 
 #show-btn {
   background-color: $success;
-  width: 65%;
-  text-align: center;
   border-radius: 7px;
   color: white;
+  font-size: 24px;
+  font-weight: bold;
+  text-shadow: 2px 2px 2px rgba(206,89,55,0);
+  text-shadow: 1px 1px 1px rgba(0,0,0,.5);
+  text-shadow: -1px -1px 1px rgba(255,255,255,.1);
   text-decoration: none;
-  padding: 8px 12px;
-  justify-content: center;
-  transition: all 0.33s;
+  padding: 10px 25px;
+  transition: 0.02s;
   box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
 }
 
@@ -156,7 +158,7 @@
 
 #show-btn-container {
   width: 80%;
-  margin: 10px auto;
+  margin: 20px auto;
   display: flex;
   justify-content: center;
   align-items: center;
