--- a/app/views/concerts/show.html.erb
+++ b/app/views/concerts/show.html.erb
@@ -28,8 +28,13 @@
         🧑‍🤝‍🧑
       </div>
       <div class="show-detail">
-        <h2><%= pluralize(@concert.users.without_me(current_user).count, 'mate') %></h2>
-        <h3>might be interested</h3>
+        <% unless @concert.users.without_me(current_user).count == 0 %>
+          <h2><%= pluralize(@concert.users.without_me(current_user).count, 'mate') %></h2>
+          <h3>might be interested</h3>
+        <% else %>
+          <h2>None of your friends are going to this concert...</h2>
+          <h3>This will be a solo trip.</h3>
+        <% end %>
       </div>
     </div>
 
