--- a/app/views/invitations/index.html.erb
+++ b/app/views/invitations/index.html.erb
@@ -4,24 +4,28 @@
     <h1>Hey <%= current_user.first_name %>! You've been invited to these concerts!</h1>
     <% if @invitations.present? %>
       <% @invitations.each do |invite| %>
+        <% concert = invite.group.concert %>
         <% if invite.status == "pending" %>
-          <% group = invite.group %>
-          <% concert =  group.concert %>
           <div class="concert-card">
-            <div class="concert-info">
-              <h2><strong><%= concert.artist.name %></strong></h2>
-              <p><strong><%= concert.date %></strong></p>
-              <p><%= concert.venue %>, <%= concert.location %></p>
-            </div>
-            <div class="concert-avatars">
-              <img src="https://s2.coinmarketcap.com/static/img/coins/200x200/5426.png" class="avatar">
-              <img src="https://s2.coinmarketcap.com/static/img/coins/200x200/5426.png" class="avatar">
-              <img src="https://s2.coinmarketcap.com/static/img/coins/200x200/5426.png" class="avatar">
-              <img src="https://s2.coinmarketcap.com/static/img/coins/200x200/5426.png" class="avatar">
-              <img src="https://s2.coinmarketcap.com/static/img/coins/200x200/5426.png" class="avatar">
-              <img src="https://s2.coinmarketcap.com/static/img/coins/200x200/5426.png" class="avatar">
-            </div>
+          <div class="img-grey" style="background-image: url(<%= concert.artist.image_url %>)"></div>
+          <div class="img-gradient"></div>
+          <div class="concert-info">
+            <h2><strong><%= concert.artist.name %></strong></h2>
+            <p><strong><%= concert.date.strftime("%A %e %B %Y") %></strong></p>
+            <p><%= concert.venue %>, <%= concert.location %></p>
           </div>
+        <div class="concert-avatars">
+          <% concert.users.without_me(current_user).first(5).each do |user|%>
+            <!-- <%= cl_image_tag user.photo.key, class: "avatar" %> -->
+            <%= image_tag user.avatar, class: "avatar"%>
+
+          <% end %>
+          <% if concert.users.count > 5 %>
+          <!--  userfollow - 5 -->
+          <img src="https://s2.coinmarketcap.com/static/img/coins/200x200/5426.png" class="avatar">
+          <% end %>
+        </div>
+      </div>
           <!-- invite.status -->
           <div class="status-buttons">
             <div class="btn-accept"><%= link_to "accept", invitation_path(invite, status: 1), data: { turbo_method: :patch } %></div>
