--- a/app/views/concerts/index.html.erb
+++ b/app/views/concerts/index.html.erb
@@ -20,8 +20,9 @@
             <%= image_tag user.avatar, class: "avatar" %>
           <% end %>
           <% if concert.users.without_me(current_user).count > 5 %>
-          <!--  userfollow - 5 -->
-          <img src="https://s2.coinmarketcap.com/static/img/coins/200x200/5426.png" class="avatar">
+            <div class="avatar">
+              + <%= concert.users.without_me(current_user).count - 5 %>
+            </div>
           <% end %>
         </div>
       </div>
