--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -22,8 +22,9 @@
               <%= user.avatar %>
             <% end %>
             <% if concert.users.without_me(current_user).count > 5 %>
-              <!--  userfollow - 5 -->
-            <img src="https://s2.coinmarketcap.com/static/img/coins/200x200/5426.png" class="avatar">
+            <div class="avatar">
+              + <%= concert.users.without_me(current_user).count - 5 %>
+            </div>
             <% end %>
           </div>
         </div>
