--- a/app/views/invitations/index.html.erb
+++ b/app/views/invitations/index.html.erb
@@ -20,9 +20,10 @@
             <%= image_tag user.avatar, class: "avatar"%>
 
           <% end %>
-          <% if concert.users.count > 5 %>
-          <!--  userfollow - 5 -->
-          <img src="https://s2.coinmarketcap.com/static/img/coins/200x200/5426.png" class="avatar">
+          <% if concert.users.without_me(current_user).count > 5 %>
+            <div class="avatar">
+              + <%= concert.users.without_me(current_user).count - 5 %>
+            </div>
           <% end %>
         </div>
       </div>
