--- a/app/views/invitations/index.html.erb
+++ b/app/views/invitations/index.html.erb
@@ -33,8 +33,6 @@
             <div class="btn-decline"><%= link_to "decline", invitation_path(invite, status: 2), data: { turbo_method: :patch } %></div>
           </div>
           <% else %>
-           <% group = invite.group %>
-          <% concert =  group.concert %>
             <p>You've <%= invite.status %> the invitation for <%= concert.artist.name %></p>
         <% end %>
       <% end %>
@@ -43,3 +41,6 @@
     <% end %>
   </div>
 </div>
+<!--
+set_flash_message(:notice, :success, kind: "Spotify") if is_navigational_format?
+-->
