--- a/app/views/shared/_search-bar.html.erb
+++ b/app/views/shared/_search-bar.html.erb
@@ -5,6 +5,6 @@
       class: "form-control",
       placeholder: "Explore upcoming gigs"
     %>
-    <%= submit_tag "Search", class: "btn btn-flat" %>
+    <%= image_submit_tag("icons8-search-30.png", class: "btn btn-flat") %>
     </div>
   <% end %>
