--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -2,7 +2,6 @@
   position: fixed;
   top: 0px;
   width: 100%;
-  justify-content: space-between;
   background: #2B3A67;
   z-index: 1000;
 }
@@ -11,25 +10,21 @@
   flex-grow: 0;
 }
 
-.navbar-lewagon .navbar-brand img {
-  width: 40px;
-}
-
-.navbar-brand {
-  color: white;
-  font-weight: 700;
-}
-
-.navbar-brand:focus {
-  color: $success;
-}
-
-.nav-item .nav-link {
-  color: white;
-}
-
 .navbar-space {
   height: 66px;
   width: 100%;
   background-color: white;
+  z-index: 500;
+}
+
+.navbar-brand {
+  width: 100%;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  img {
+    object-fit: cover;
+  }
 }
