--- a/app/assets/stylesheets/components/_body.scss
+++ b/app/assets/stylesheets/components/_body.scss
@@ -18,3 +18,10 @@
   margin-bottom: 50px;
   margin-top: 80px;
 }
+
+#page-container-groups-index {
+  position: relative;
+  min-height: calc(100vh - 144px);
+  margin-bottom: 66px;
+  margin-top: 80px;
+}
