--- a/app/views/invitations/index.html.erb
+++ b/app/views/invitations/index.html.erb
@@ -1,4 +1,4 @@
-<div id="page-container-groups">
+<div id="page-container-groups-index">
 
   <div class="invitation">
     <h1>Hey <%= current_user.first_name %>! You've been invited to these concerts!</h1>
