--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,4 +1,4 @@
-<div id="page-container-groups">
+<div id="page-container-groups-index">
 
   <div class="show">
     <h1>These are the concerts you're attending!</h1>
@@ -22,9 +22,9 @@
               <%= user.avatar %>
             <% end %>
             <% if concert.users.without_me(current_user).count > 5 %>
-            <div class="avatar">
-              + <%= concert.users.without_me(current_user).count - 5 %>
-            </div>
+              <div class="avatar">
+                <%= concert.users.without_me(current_user).count - 5 %>
+              </div>
             <% end %>
           </div>
         </div>
